--- a/vacancy.html
+++ b/vacancy.html
@@ -161,10 +161,10 @@
 				<div class="vacantion-button__btn">
 					<div class="vacantion-button__container _container">
 						<div class="vacantion-button__item">
-							<div class="vacantion-button__text">Больше
-								вакансий</div>
+							<div class="vacantion-button__text"><a href="vacansy-second.html">Больше
+									вакансий</a></div>
 							<div class="vacantion-button__arrow">
-								<a href="#"><img src="images/arrow-vacantion-button.svg" alt></a>
+								<a href="vacansy-second.html"><img src="images/arrow-vacantion-button.svg" alt></a>
 							</div>
 						</div>
 					</div>
@@ -173,7 +173,8 @@
 					<div class="our-advantage__conatiner _container">
 						<div class="our-advantage__column ">
 							<div class="our-advantage__title">Преимущества работы в Toy Stream</div>
-							<div class="our-advantage__text">Toy.Stream сегодня — это команда из более 500
+							<div class="our-advantage__text">Toy.Stream сегодня — это команда из
+								более 500
 								человек и офисы по всему миру. Мы входим в топ-10 игровых разработчиков
 								по установкам — общее количество загрузок перевалило за 2 млрд, а
 								ежемесячная аудитория составляет более 250 млн игроков.
@@ -185,34 +186,34 @@
 						<div class="our-advantage__column">
 							<div class="our-advantage__row">
 								<div class="our-advantage__item">
-								<div class="our-advantage__image">
-									<img src="images/Flag-about-company.svg" alt="Flag image">
-								</div>
-								<div class="our-advantage__name">Преимущество 1</div>
-								<div class="our-advantage__text-item">Установок</div>
+									<div class="our-advantage__image">
+										<img src="images/Flag-about-company.svg" alt="Flag image">
+									</div>
+									<div class="our-advantage__name">Преимущество 1</div>
+									<div class="our-advantage__text-item">Установок</div>
 								</div>
 								<div class="our-advantage__item">
-								<div class="our-advantage__image">
-									<img src="images/colba-about-company.svg" alt="Colba image">
-								</div>
-								<div class="our-advantage__name">Преимущество 2</div>
-								<div class="our-advantage__text-item">Установок</div>
+									<div class="our-advantage__image">
+										<img src="images/colba-about-company.svg" alt="Colba image">
+									</div>
+									<div class="our-advantage__name">Преимущество 2</div>
+									<div class="our-advantage__text-item">Установок</div>
 								</div>
 							</div>
 							<div class="our-advantage__row">
 								<div class="our-advantage__item">
-								<div class="our-advantage__image">
-									<img src="images/cup-oabout-company.svg" alt="Cup image">
-								</div>
-								<div class="our-advantage__name">Преимущество 3</div>
-								<div class="our-advantage__text-item">Установок</div>
+									<div class="our-advantage__image">
+										<img src="images/cup-oabout-company.svg" alt="Cup image">
+									</div>
+									<div class="our-advantage__name">Преимущество 3</div>
+									<div class="our-advantage__text-item">Установок</div>
 								</div>
 								<div class="our-advantage__item">
-								<div class="our-advantage__image">
-									<img src="images/star-about-company.svg" alt="Star image">
-								</div>
-								<div class="our-advantage__name">Преимущество 4</div>
-								<div class="our-advantage__text-item">Установок</div>
+									<div class="our-advantage__image">
+										<img src="images/star-about-company.svg" alt="Star image">
+									</div>
+									<div class="our-advantage__name">Преимущество 4</div>
+									<div class="our-advantage__text-item">Установок</div>
 								</div>
 							</div>
 						</div>
