--- a/vacansy-second.html
+++ b/vacansy-second.html
@@ -49,7 +49,7 @@
 
 				</div>
 			</header>
-			<main class="main">
+			<main class="main-vacancyssecond">
 				<div class="vacantion-second">
 					<div class="vacantion-second__row">
 						<div class="vacantion-second__row-img">
@@ -127,6 +127,63 @@
 							поддержку важных жизненных событий;
 							реферальную программу;
 							медицинскую страховку, оплату занятий спортом и другие бонусы.</div>
+					</div>
+				</div>
+				<div class="write-us">
+					<div class="write-us__container _container">
+						<div class="write-us__title">Напишите нам</div>
+						<div class="write-us__row">
+							<div class="write-us__column">
+								<div class="write-us__first-input">
+									<input type="text" class="input" placeholder="ФИО">
+								</div>
+								<div class="write-us__second-input">
+									<input type="text" class="input-second" placeholder="Прикрепить резюму">
+								</div>
+							</div>
+							<div class="write-us__column">
+								<div class="write-us__first-input">
+									<input type="text" class="input" placeholder="Email">
+								</div>
+								<div class="write-us__second-input">
+									<input type="text" class="input-second"
+										placeholder="Прикрепить дополнительный файлы">
+								</div>
+							</div>
+							<div class="write-us__column">
+								<div class="write-us__first-input">
+									<input type="text" class="input" placeholder="Телефон">
+								</div>
+								<div class="write-us__second-input">
+									<input type="text" class="input-second"
+										placeholder="Дополнительный комментарии">
+								</div>
+							</div>
+							<div class="write-us__button">
+								<a href="#" class="write-us__link-button">Вверх</a>
+							</div>
+						</div>
+						<div class="write-us__row">
+							<div class="write-us__container _container">
+								<div class="write-us__btn">
+									<div class="write-us__btn-link">
+										<a href="#">write-us__btn</a>
+									</div>
+									<div class="write-us__arrow">
+										<a href="#">
+											<img src="images/arrow-vacance-second.svg" alt="arrow-vacance image">
+										</a>
+									</div>
+								</div>
+								<div class="write-us__checbox">
+									<input type="checkbox" class="write-us__check-input">
+								</div>
+								<div class="write-us__text-">
+									Я соглашаюсь с Правилами пользования
+									и Политикой конфиденциальности.
+								</div>checkbox
+							</div>
+						</div>
 					</div>
 				</div>
 			</main>
