--- a/vacansy-second.html
+++ b/vacansy-second.html
@@ -157,31 +157,30 @@
 								<div class="write-us__second-input">
 									<input type="text" class="input-second"
 										placeholder="Дополнительный комментарии">
+
 								</div>
 							</div>
 							<div class="write-us__button">
 								<a href="#" class="write-us__link-button">Вверх</a>
 							</div>
 						</div>
-						<div class="write-us__row">
-							<div class="write-us__container _container">
-								<div class="write-us__btn">
-									<div class="write-us__btn-link">
-										<a href="#">write-us__btn</a>
-									</div>
-									<div class="write-us__arrow">
-										<a href="#">
-											<img src="images/arrow-vacance-second.svg" alt="arrow-vacance image">
-										</a>
-									</div>
+						<div class="write-us__row-bottom">
+							<div class="write-us__btn">
+								<div class="write-us__btn-link">
+									<a href="#">Отправить</a>
 								</div>
-								<div class="write-us__checbox">
-									<input type="checkbox" class="write-us__check-input">
+								<div class="write-us__arrow">
+									<a href="#">
+										<img src="images/arrow-vacance-second.svg" alt="arrow-vacance image">
+									</a>
 								</div>
-								<div class="write-us__text-">
-									Я соглашаюсь с Правилами пользования
-									и Политикой конфиденциальности.
-								</div>checkbox
+							</div>
+							<div class="write-us__checbox">
+								<input type="checkbox" class="write-us__check-input">
+							</div>
+							<div class="write-us__text">
+								Я соглашаюсь с Правилами пользования <br>
+								и Политикой конфиденциальности.
 							</div>
 						</div>
 					</div>
